--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "email-validator>=2.3.0",
     "fastapi>=0.121.2",
+    "httpx>=0.28.1",
+    "pytest>=8.4.2",
     "uvicorn>=0.38.0",
 ]
